--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "spmedgroupMobile",
-  "displayName": "spmedgroupMobile"
+  "name": "SPMedGroupMobile",
+  "displayName": "SPMedGroupMobile"
 }
