--- a/ios/spmedgroupMobile.xcodeproj/xcshareddata/xcschemes/spmedgroupMobile.xcscheme
+++ b/ios/spmedgroupMobile.xcodeproj/xcshareddata/xcschemes/spmedgroupMobile.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "spmedgroupMobile.app"
-               BlueprintName = "spmedgroupMobile"
-               ReferencedContainer = "container:spmedgroupMobile.xcodeproj">
+               BuildableName = "SPMedGroupMobile.app"
+               BlueprintName = "SPMedGroupMobile"
+               ReferencedContainer = "container:SPMedGroupMobile.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "spmedgroupMobileTests.xctest"
-               BlueprintName = "spmedgroupMobileTests"
-               ReferencedContainer = "container:spmedgroupMobile.xcodeproj">
+               BuildableName = "SPMedGroupMobileTests.xctest"
+               BlueprintName = "SPMedGroupMobileTests"
+               ReferencedContainer = "container:SPMedGroupMobile.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "spmedgroupMobileTests.xctest"
-               BlueprintName = "spmedgroupMobileTests"
-               ReferencedContainer = "container:spmedgroupMobile.xcodeproj">
+               BuildableName = "SPMedGroupMobileTests.xctest"
+               BlueprintName = "SPMedGroupMobileTests"
+               ReferencedContainer = "container:SPMedGroupMobile.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "spmedgroupMobile.app"
-            BlueprintName = "spmedgroupMobile"
-            ReferencedContainer = "container:spmedgroupMobile.xcodeproj">
+            BuildableName = "SPMedGroupMobile.app"
+            BlueprintName = "SPMedGroupMobile"
+            ReferencedContainer = "container:SPMedGroupMobile.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "spmedgroupMobile.app"
-            BlueprintName = "spmedgroupMobile"
-            ReferencedContainer = "container:spmedgroupMobile.xcodeproj">
+            BuildableName = "SPMedGroupMobile.app"
+            BlueprintName = "SPMedGroupMobile"
+            ReferencedContainer = "container:SPMedGroupMobile.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "spmedgroupMobile.app"
-            BlueprintName = "spmedgroupMobile"
-            ReferencedContainer = "container:spmedgroupMobile.xcodeproj">
+            BuildableName = "SPMedGroupMobile.app"
+            BlueprintName = "SPMedGroupMobile"
+            ReferencedContainer = "container:SPMedGroupMobile.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
