--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "jwt-decode": "^2.2.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
-    "react-navigation": "^3.9.1"
+    "react-native-vector-icons": "^6.4.2",
+    "react-navigation": "^3.9.1",
+    "reactstrap": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
