--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^3.1.0",
     "axios": "^0.18.0",
     "jwt-decode": "^2.2.0",
     "react": "16.8.3",
